All menu pages implemented; slide animation improved

--- a/menus/menu1.html
+++ b/menus/menu1.html
@@ -54,7 +54,9 @@
                                             <p class="tile-ingredients">Aux zestes d'orange</p>
                                         </div>
                                         <div class="slide-container">
-                                            <p class="tile-price">25€</p>
+                                            <div class="price">
+                                                <p class="tile-price">25€</p>
+                                            </div>
                                             <div class="slide">
                                                 <div class="slide-content">
                                                     <i class="fas fa-check-circle"></i>
