--- a/menus/menu4.html
+++ b/menus/menu4.html
@@ -38,7 +38,7 @@
                     </picture>
                     <div class="menu">
                         <div class="menu-title">
-                            <h1 id="restaurant-title">La note enchantée</h1>
+                            <h1 id="restaurant-title">Le délice des sens</h1>
                             <div id="restaurant-icon">
                                 <i class="far fa-heart"></i>
                                 <i class="fas fa-heart"></i>
@@ -50,8 +50,8 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Ravioles de foie gras</h2>
-                                            <p class="tile-ingredients">Accompagnés de leur crème à la truffe</p>
+                                            <h2 class="tile-meal">Tartare de thon</h2>
+                                            <p class="tile-ingredients">Assaisonné au yuzu</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">25€</p>
@@ -67,8 +67,8 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Caviar osciètre</h2>
-                                            <p class="tile-ingredients">Sur blini à la farine de blé noir</p>
+                                            <h2 class="tile-meal">Bouchée de homard croustillant</h2>
+                                            <p class="tile-ingredients">Et sa farandole de petits légumes</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">35€</p>
@@ -84,28 +84,11 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Homard et espuma de potiron</h2>
-                                            <p class="tile-ingredients">Mariné aux zestes d'orange</p>
+                                            <h2 class="tile-meal">Velouté de cèpes</h2>
+                                            <p class="tile-ingredients">Aux truffes</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">20€</p>
-                                            <div class="slide">
-                                                <div class="slide-content">
-                                                    <i class="fas fa-check-circle"></i>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    
-                                </article>
-                                <article class="tile">
-                                    <div class="tile-content">
-                                        <div class="tile-text">
-                                            <h2 class="tile-meal">Foie gras de canard cuit entier</h2>
-                                            <p class="tile-ingredients">Confiture de figue et pain toasté</p>
-                                        </div>
-                                        <div class="slide-container">
-                                            <p class="tile-price">35€</p>
                                             <div class="slide">
                                                 <div class="slide-content">
                                                     <i class="fas fa-check-circle"></i>
@@ -123,8 +106,8 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Noix de coquilles Saint-Jacques</h2>
-                                            <p class="tile-ingredients">Sur lit de purée de céleri-rave</p>
+                                            <h2 class="tile-meal">Poulet rôti aux herbes de Provence</h2>
+                                            <p class="tile-ingredients">Et sa crème de truffe</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">40€</p>
@@ -140,8 +123,8 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Langoustine poêlée</h2>
-                                            <p class="tile-ingredients">Purée de patate douce</p>
+                                            <h2 class="tile-meal">Langouste rôtie</h2>
+                                            <p class="tile-ingredients">Et ses légumes de saison</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">35€</p>
@@ -157,8 +140,8 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Mijoté de queue de boeuf</h2>
-                                            <p class="tile-ingredients">Et riz sauvage aux zestes de citron</p>
+                                            <h2 class="tile-meal">Côte de boeuf Angus</h2>
+                                            <p class="tile-ingredients">Et sa purée de panais</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">44€</p>
@@ -179,8 +162,8 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Macaron noisette et chocolat</h2>
-                                            <p class="tile-ingredients">Glace au caramel brun et sel de Guérande</p>
+                                            <h2 class="tile-meal">Farandole de desserts</h2>
+                                            <p class="tile-ingredients">Du chef</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">18€</p>
@@ -196,8 +179,8 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Baba au rhum revisité</h2>
-                                            <p class="tile-ingredients">Avec son coulis de citron</p>
+                                            <h2 class="tile-meal">Crème brulée</h2>
+                                            <p class="tile-ingredients">Revisitée</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">22€</p>
@@ -213,8 +196,8 @@
                                 <article class="tile">
                                     <div class="tile-content">
                                         <div class="tile-text">
-                                            <h2 class="tile-meal">Tarte au citron meringuée </h2>
-                                            <p class="tile-ingredients">Déstructurée</p>
+                                            <h2 class="tile-meal">Tiramisu</h2>
+                                            <p class="tile-ingredients">À la noisette</p>
                                         </div>
                                         <div class="slide-container">
                                             <p class="tile-price">23€</p>
