--- a/menus/menu2.html
+++ b/menus/menu2.html
@@ -18,7 +18,7 @@
                 <div class="top">
                     <div class="top-content">
                         <div class="home-button">
-                            <a href="#">
+                            <a href="../index.html">
                                 <div class="home-icon">
                                     <img src="../images/arrow.png"></i>
                                 </div>
