Loading spinner improved; location input implemented

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                 <div class="location">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Paris, Belleville</p>
+                    <input value="Paris, Belleville"></input>
                 </div>
                 <div class="sub-top">
                     <div class="sub-top-content">
