--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="tile-notification-frame">
                         <p class="notification">Nouveau</p>
                         <article class="tile">
-                            <a href="#">
+                            <a href="menus/menu3.html">
                                 <picture class="restaurant-tile-img">
                                     <source
                                     srcset="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -118,7 +118,7 @@
                     <div class="tile-notification-frame">
                         <p class="notification">Nouveau</p>
                         <article class="tile">
-                            <a href="#">
+                            <a href="menus/menu2.html">
                                 <picture class="restaurant-tile-img">
                                     <source
                                     srcset="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -140,7 +140,7 @@
                         </article>
                     </div>
                     <article class="tile">
-                        <a href="#">
+                        <a href="menus/menu1.html">
                             <picture class="restaurant-tile-img">
                                 <source
                                 srcset="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -161,7 +161,7 @@
                         </a>
                     </article>
                     <article class="tile">
-                        <a href="#">
+                        <a href="menus/menu4.html">
                             <picture class="restaurant-tile-img">
                                 <source
                                 srcset="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
