--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                 <div class="location">
                     <i class="fas fa-map-marker-alt"></i>
-                    <input value="Paris, Belleville"></input>
+                    <input value="Paris, Belleville">
                 </div>
                 <div class="sub-top">
                     <div class="sub-top-content">
@@ -47,7 +47,7 @@
                 <div class="function-box-content">
                         <ul>
                             <li class="function-tile-global">
-                                <span class="function-number"><p>1</p></span> 
+                                <div class="function-number"><p>1</p></div> 
                                 <div class="function-tile tile">
                                     <a href="#">
                                         <div class="function-tile-content">
@@ -60,7 +60,7 @@
                                 </div> 
                             </li>
                             <li class="function-tile-global">
-                                <span class="function-number"><p>2</p></span> 
+                                <div class="function-number"><p>2</p></div> 
                                 <div class="function-tile tile">
                                     <a href="#">
                                         <div class="function-tile-content">
@@ -73,7 +73,7 @@
                                 </div> 
                             </li>
                             <li class="function-tile-global">
-                                <span class="function-number"><p>3</p></span> 
+                                <div class="function-number"><p>3</p></div> 
                                 <div class="function-tile tile">
                                     <a href="#">
                                         <div class="function-tile-content">
