--- a/menus/menu2.html
+++ b/menus/menu2.html
@@ -20,7 +20,7 @@
                         <div class="home-button">
                             <a href="../index.html">
                                 <div class="home-icon">
-                                    <img src="../images/arrow.png"></i>
+                                    <img src="../images/arrow.png" alt="home">
                                 </div>
                             </a>
                         </div>
